--- a/index.html
+++ b/index.html
@@ -5,8 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PetFinder - Encontre seu novo amigo</title>
     <link rel="stylesheet" href="style.css">
+    
+    <!-- ✅ ADICIONE ESTAS LINKS -->
     <link rel="manifest" href="manifest.json">
+    <link rel="icon" href="images/icon-72x72.jpg">
     <meta name="theme-color" content="#FF6B6B">
+    
+    <!-- ✅ IMPORTANTE para PWA -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="default">
+    <meta name="apple-mobile-web-app-title" content="PetFinder">
+    <link rel="apple-touch-icon" href="images/icon-144x144.jpg">
 </head>
 <body>
     <div class="container">
@@ -35,7 +44,6 @@
             </div>
 
             <div class="pets" id="pets">
-                <!-- Pets aparecerão aqui -->
             </div>
         </main>
 
@@ -61,3 +69,4 @@
     <script src="app.js"></script>
 </body>
 </html>
+
